Fix the bug with the context values selector behind the editor that makes it unclickable

--- a/frontend/src/static/css/diploma_editor.css
+++ b/frontend/src/static/css/diploma_editor.css
@@ -16,7 +16,8 @@
     height: initial;
 }
 
-.block-type-selector {
+.context-values-selector {
     width: 14rem;
     margin: 0 0 6px 10px;
+    z-index: 2;
 }
